Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -11,6 +11,12 @@ sidebar_position: 4
 **Entra ID**
 
 - [entra group user add](../cmd/entra/group/group-user-add.mdx) - adds a user to a Microsoft Entra ID group [#5471](https://github.com/pnp/cli-microsoft365/issues/5471)
+- [entra group add](../cmd/entra/group/group-add.mdx) - creates a Microsoft Entra group [#5476](https://github.com/pnp/cli-microsoft365/issues/5476)
+- [entra app permission list](../cmd/entra/app/app-permission-list.mdx) - lists the application and delegated permissions for a specified Entra Application Registration [#5668](https://github.com/pnp/cli-microsoft365/issues/5668)
+
+**File:**
+
+- [file copy](../cmd/file/file-copy.mdx) - copies a file to another location using the Microsoft Graph [#4623](https://github.com/pnp/cli-microsoft365/issues/4623)
 
 ### Changes
 
@@ -21,6 +27,7 @@ sidebar_position: 4
 - renamed internal CLI utilities from `aad` to `entra` [#5757](https://github.com/pnp/cli-microsoft365/issues/5757)
 - added request header Prefer: include-unknown-enum-members when reading connection schema [#5826](https://github.com/pnp/cli-microsoft365/issues/5826)
 - updated Docker images to use Node@20 [#5809](https://github.com/pnp/cli-microsoft365/pull/5809)
+- updated 'm365 entra user get' command to use correct query to Graph API [#5788](https://github.com/pnp/cli-microsoft365/issues/5788)
 
 ## [v7.4.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.4.0)
 
