--- a/docs/docs/cmd/spo/user/user-remove.mdx
+++ b/docs/docs/cmd/spo/user/user-remove.mdx
@@ -23,10 +23,10 @@ m365 spo user remove [options]
 : Login name of the site user to remove
 
 `--userName [userName]`
-: User name of the site user to remove
+: User name of the user to remove from web
 
 `--email [email]`
-: Email of the site user to remove
+: Email of the user to remove from web
 
 `--entraGroupId [entraGroupId]`
 : Object ID of the Entra group ID to remove
