--- a/docs/docs/cmd/connection/connection-list.mdx
+++ b/docs/docs/cmd/connection/connection-list.mdx
@@ -54,10 +54,10 @@ m365 connection list
   <TabItem value="Text">
 
   ```text
-  name                                  connectedAs         authType
-  ------------------------------------  -------------------  -------------------
-  028de82d-7fd9-476e-a9fd-be9714280ff3  alexw@contoso.com    DeviceCode
-  acd6df42-10a9-4315-8928-53334f1c9d01  Contoso Application  Secret
+  name                                  connectedAs          authType    active
+  ------------------------------------  -------------------  ----------  ------
+  028de82d-7fd9-476e-a9fd-be9714280ff3  alexw@contoso.com    DeviceCode  true
+  acd6df42-10a9-4315-8928-53334f1c9d01  Contoso Application  Secret      false
   ```
 
   </TabItem>
