--- a/docs/docs/cmd/connection/connection-remove.mdx
+++ b/docs/docs/cmd/connection/connection-remove.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # connection remove
 
-When signed in with multiple identities, removes a specified connection
+Remove the specified connection
 
 ## Usage
 
@@ -15,6 +15,9 @@ m365 connection remove [options]
 ```md definition-list
 `-n, --name <name>`
 : The name of the connection to remove.
+
+`-f, --force`
+: Don't prompt for confirmation to remove the connection.
 ```
 
 <Global />
@@ -29,6 +32,12 @@ Remove an existing connection
 
 ```sh
 m365 connection remove --name '0bb7cb89-7fae-4775-a01a-c372cc167371'
+```
+
+Remove an existing connection without prompting for confirmation
+
+```sh
+m365 connection remove --name '0bb7cb89-7fae-4775-a01a-c372cc167371' --force
 ```
 
 ## Response
