--- a/docs/docs/cmd/connection/connection-set.mdx
+++ b/docs/docs/cmd/connection/connection-set.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # connection set
 
-When signed in with multiple identities, update a specified connection
+Rename the specified connection
 
 ## Usage
 
