--- a/docs/docs/cmd/connection/connection-use.mdx
+++ b/docs/docs/cmd/connection/connection-use.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # connection use
 
-When signed in with multiple identities, switch to another connection
+Activate the specified Microsoft 365 tenant connection
 
 ## Usage
 
