New command: outlook message remove

--- a/docs/docs/cmd/outlook/message/message-remove.mdx
+++ b/docs/docs/cmd/outlook/message/message-remove.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # outlook message remove
 
-Removes a specifc message from a mailbox
+Removes a specific message from a mailbox
 
 ## Usage
 
@@ -30,7 +30,7 @@ m365 outlook message remove [options]
 
 ## Remarks
 
-:::info
+:::warning
 
 This command will permanently delete the Outlook message. To move a message to the trash bin, use [outlook message move](./message-move.mdx) instead.
 
@@ -64,4 +64,4 @@ m365 outlook message remove --id AAMkAGVmMDEzMTM4LTZmYWUtNDdkNC1hMDZiLTU1OGY5OTZ
 
 ## Response
 
-The command won't return a response on success
+The command won't return a response on success.
