Adds response section for remaning commands in docs. Closes #5851

--- a/docs/docs/cmd/entra/administrativeunit/administrativeunit-member-add.mdx
+++ b/docs/docs/cmd/entra/administrativeunit/administrativeunit-member-add.mdx
@@ -1,6 +1,4 @@
 import Global from '/docs/cmd/_global.mdx';
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
 
 # entra administrativeunit member add
 
@@ -93,6 +91,10 @@ Add a single device specified by name to an administrative unit specified by nam
 ```sh
 m365 entra administrativeunit member add --administrativeUnitName 'Marketing Division' --deviceName 'JohnDoe-PC'
 ```
+
+## Response 
+
+The command won't return a response on success.
 
 ## More information
 
