--- a/docs/docs/cmd/external/item/item-add.mdx
+++ b/docs/docs/cmd/external/item/item-add.mdx
@@ -18,7 +18,7 @@ m365 external item add [options]
 `-i, --id <id>`
 : The ID of the item to create
 
-`--externalConnectionId <name>`
+`--externalConnectionId <externalConnectionId>`
 : The ID of the external connection on which to create the item
 
 `--content <content>`
