--- a/docs/docs/cmd/file/convert/convert-pdf.mdx
+++ b/docs/docs/cmd/file/convert/convert-pdf.mdx
@@ -55,3 +55,7 @@ Converts file from a document library to PDF and saves the converted file to the
 ```sh
 m365 file convert pdf --sourceFile "https://contoso.sharepoint.com/Shared Documents/file.docx" --targetFile "https://contoso.sharepoint.com/Shared Documents/file.pdf"
 ```
+
+## Response
+
+The command won't return a response on success.
