--- a/docs/docs/cmd/file/file-add.mdx
+++ b/docs/docs/cmd/file/file-add.mdx
@@ -62,3 +62,7 @@ Uploads file from the current folder to a document library in the specified site
 ```sh
 m365 file add --filePath file.pdf --folderUrl "https://contoso.sharepoint.com/sites/Contoso/Shared Documents" --siteUrl "https://contoso.sharepoint.com/sites/Contoso"
 ```
+
+## Response
+
+The command won't return a response on success.
