--- a/docs/docs/cmd/setup.mdx
+++ b/docs/docs/cmd/setup.mdx
@@ -90,3 +90,7 @@ Configure CLI for Microsoft for use in scripts without prompting for additional 
 ```sh
 m365 setup --scripting
 ```
+
+## Response
+
+The command won't return a response on success.
