New command: Remove member from administrative unit

--- a/docs/docs/cmd/entra/administrativeunit/administrativeunit-member-remove.mdx
+++ b/docs/docs/cmd/entra/administrativeunit/administrativeunit-member-remove.mdx
@@ -17,22 +17,22 @@ m365 entra administrativeunit member remove [options]
 : The id of the member to be removed. Specify either `id`, `userId`, `userName`, `groupId`, `groupName`, `deviceId` or `deviceName`.
 
 `--userId [userId]`
-: The id of the user to be removed. Specify `id`, `userId`, `userName`, `groupId`, `groupName`, `deviceId` or `deviceName`.
+: The id of the user to be removed. Specify either `id`, `userId`, `userName`, `groupId`, `groupName`, `deviceId` or `deviceName`.
 
 `--userName [userName]`
-: The user principal name (UPN) of the user to be removed. Specify `id`, `userId`, `userName`, `groupId`, `groupName`, `deviceId` or `deviceName`.
+: The user principal name (UPN) of the user to be removed. Specify either `id`, `userId`, `userName`, `groupId`, `groupName`, `deviceId` or `deviceName`.
 
 `--groupId [groupId]`
-: The id of the group to be removed. Specify `id`, `userId`, `userName`, `groupId`, `groupName`, `deviceId` or `deviceName`.
+: The id of the group to be removed. Specify either `id`, `userId`, `userName`, `groupId`, `groupName`, `deviceId` or `deviceName`.
 
 `--groupName [groupName]`
-: The name of the group to be removed. Specify `id`, `userId`, `userName`, `groupId`, `groupName`, `deviceId` or `deviceName`.
+: The name of the group to be removed. Specify either `id`, `userId`, `userName`, `groupId`, `groupName`, `deviceId` or `deviceName`.
 
 `--deviceId [deviceId]`
-: The id of the device to be removed. Specify `id`, `userId`, `userName`, `groupId`, `groupName`, `deviceId` or `deviceName`.
+: The id of the device to be removed. Specify either `id`, `userId`, `userName`, `groupId`, `groupName`, `deviceId` or `deviceName`.
 
 `--deviceName [deviceName]`
-: The name of the device to be removed. Specify `id`, `userId`, `userName`, `groupId`, `groupName`, `deviceId` or `deviceName`.
+: The name of the device to be removed. Specify either `id`, `userId`, `userName`, `groupId`, `groupName`, `deviceId` or `deviceName`.
 
 `--administrativeUnitId [administrativeUnitId]`
 : The id of the administrative unit. Specify either `administrativeUnitId` or `administrativeUnitName` but not both.
