--- a/docs/docs/cmd/entra/m365group/m365group-set.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-set.mdx
@@ -35,10 +35,25 @@ m365 aad m365group set [options]
 : Comma-separated list of Microsoft 365 Group members to add
 
 `--isPrivate [isPrivate]`
-: Set to true if the Microsoft 365 Group should be private and to false if it should be public (default)
+: Set to `true` if the Microsoft 365 Group should be private and to `false` if it should be public (default)
 
 `-l, --logoPath [logoPath]`
 : Local path to the image file to use as group logo
+
+`--allowExternalSenders [allowExternalSenders]`
+: Indicates if people external to the organization can send messages to the group. Valid values: `true`, `false`.
+
+`--autoSubscribeNewMembers [autoSubscribeNewMembers]`
+: Indicates if new members added to the group will be auto-subscribed to receive email notifications. Valid values: `true`, `false`.
+
+`--hideFromAddressLists [hideFromAddressLists]`
+: Indicates if the group is not displayed in certain parts of the Outlook UI: the Address Book, address lists for selecting message recipients, and the Browse Groups dialog for searching groups. Valid values: `true`, `false`.
+
+`--hideFromOutlookClients [hideFromOutlookClients]`
+: Indicates if the group is not displayed in Outlook clients, such as Outlook for Windows and Outlook on the web. Valid values: `true`, `false`.
+
+`--isSubscribedByMail [isSubscribedByMail]`
+: Indicates whether the signed-in user is subscribed to receive email conversations. Valid values: `true`, `false`.
 ```
 
 <Global />
@@ -49,36 +64,60 @@ When updating group's owners and members, the command will add newly specified u
 
 When specifying the path to the logo image you can use both relative and absolute paths. Note, that ~ in the path, will not be resolved and will most likely result in an error.
 
+:::warning
+
+The options `allowExternalSenders` and `autoSubscribeNewMembers` can only be set using delegated permissions.
+
+:::
+
 ## Examples
 
-Update Microsoft 365 Group display name
+Update Microsoft 365 Group display name.
 
 ```sh
 m365 entra m365group set --id 28beab62-7540-4db1-a23f-29a6018a3848 --displayName Finance
 ```
 
-Change Microsoft 365 Group visibility to public
+Change Microsoft 365 Group visibility to public.
 
 ```sh
-m365 entra m365group set --id 28beab62-7540-4db1-a23f-29a6018a3848 --isPrivate false
+m365 entra m365group set --id 28beab62-7540-4db1-a23f-29a6018a3848 --isPrivate `false`
 ```
 
-Add new Microsoft 365 Group owners
+Add new Microsoft 365 Group owners.
 
 ```sh
 m365 entra m365group set --id 28beab62-7540-4db1-a23f-29a6018a3848 --owners "DebraB@contoso.onmicrosoft.com,DiegoS@contoso.onmicrosoft.com"
 ```
 
-Add new Microsoft 365 Group members
+Add new Microsoft 365 Group members.
 
 ```sh
 m365 entra m365group set --id 28beab62-7540-4db1-a23f-29a6018a3848 --members "DebraB@contoso.onmicrosoft.com,DiegoS@contoso.onmicrosoft.com"
 ```
 
-Update Microsoft 365 Group logo
+Update Microsoft 365 Group logo.
 
 ```sh
 m365 entra m365group set --id 28beab62-7540-4db1-a23f-29a6018a3848 --logoPath images/logo.png
+```
+
+Hide the Microsoft 365 group from the address lists and the Outlook clients.
+
+```sh
+m365 entra m365group set --id 28beab62-7540-4db1-a23f-29a6018a3848 --hideFromOutlookClients true --hideFromAddressLists true
+```
+
+Auto-subscribe new members to receive email notifications and do not allow external senders to send messages to the group.
+
+```sh
+m365 entra m365group set --id 28beab62-7540-4db1-a23f-29a6018a3848 --autoSubscribeNewMembers true --allowExternalSenders false
+```
+
+Set-up the Microsoft 365 group so that the signed-in user is subscribed to receive email conversations.
+
+```sh
+m365 entra m365group set --id 28beab62-7540-4db1-a23f-29a6018a3848 --isSubscribedByMail
 ```
 
 ## Response
