--- a/docs/docs/cmd/teams/team/team-list.mdx
+++ b/docs/docs/cmd/teams/team/team-list.mdx
@@ -36,6 +36,8 @@ m365 teams team list [options]
 
 To list `joined` or `associated` teams of another user, you have to be a Teams Administrator or use application permissions.
 
+When you are using application permissions and you try to get the joined or associated teams, you have to specify either `userId` or `userName`.
+
 :::
 
 You can only see the details or archived status of the Microsoft Teams you are a member of.
