Adds additional example for 'spo theme set'. Closes #5819

--- a/docs/docs/cmd/spo/theme/theme-set.mdx
+++ b/docs/docs/cmd/spo/theme/theme-set.mdx
@@ -76,13 +76,25 @@ To use this command you have to have permissions to access the tenant admin site
 Add or update a theme from a theme JSON file
 
 ```sh
-m365 spo theme set --name Contoso-Blue --theme @/Users/rjesh/themes/contoso-blue.json
+m365 spo theme set --name Contoso-Blue --theme @/Users/user/themes/contoso-blue.json
 ```
 
 Add or update an inverted theme from a theme JSON file
 
 ```sh
-m365 spo theme set --name Contoso-Blue --theme @/Users/rjesh/themes/contoso-blue.json --isInverted
+m365 spo theme set --name Contoso-Blue --theme @/Users/user/themes/contoso-blue.json --isInverted
+```
+
+Add or update a theme from inline JSON
+
+```sh
+m365 spo theme set --name Contoso-Red --theme '{"themePrimary":"#d81e05","themeLighterAlt":"#fdf5f4","themeLighter":"#f9d6d2","themeLight":"#f4b4ac","themeTertiary":"#e87060","themeSecondary":"#dd351e","themeDarkAlt":"#c31a04","themeDark":"#a51603","themeDarker":"#791002","neutralLighterAlt":"#eeeeee","neutralLighter":"#f5f5f5","neutralLight":"#e1e1e1","neutralQuaternaryAlt":"#d1d1d1","neutralQuaternary":"#c8c8c8","neutralTertiaryAlt":"#c0c0c0","neutralTertiary":"#c2c2c2","neutralSecondary":"#858585","neutralPrimaryAlt":"#4b4b4b","neutralPrimary":"#333333","neutralDark":"#272727","black":"#1d1d1d","white":"#f5f5f5"}'
+```
+
+Add or update an inverted theme from inline JSON
+
+```sh
+m365 spo theme set --name Contoso-Red --theme '{"themePrimary":"#d81e05","themeLighterAlt":"#fdf5f4","themeLighter":"#f9d6d2","themeLight":"#f4b4ac","themeTertiary":"#e87060","themeSecondary":"#dd351e","themeDarkAlt":"#c31a04","themeDark":"#a51603","themeDarker":"#791002","neutralLighterAlt":"#eeeeee","neutralLighter":"#f5f5f5","neutralLight":"#e1e1e1","neutralQuaternaryAlt":"#d1d1d1","neutralQuaternary":"#c8c8c8","neutralTertiaryAlt":"#c0c0c0","neutralTertiary":"#c2c2c2","neutralSecondary":"#858585","neutralPrimaryAlt":"#4b4b4b","neutralPrimary":"#333333","neutralDark":"#272727","black":"#1d1d1d","white":"#f5f5f5"}' --isInverted
 ```
 
 ## Response
