Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -10,9 +10,12 @@ sidebar_position: 4
 
 **Entra ID**
 
+- [entra administrativeunit member remove](../cmd/entra/administrativeunit/administrativeunit-member-remove.mdx) - removes a member (user, group, or device) from an administrative unit [#5734](https://github.com/pnp/cli-microsoft365/issues/5734)
+- [entra app permission list](../cmd/entra/app/app-permission-list.mdx) - lists the application and delegated permissions for a specified Entra Application Registration [#5668](https://github.com/pnp/cli-microsoft365/issues/5668)
 - [entra group user add](../cmd/entra/group/group-user-add.mdx) - adds a user to a Microsoft Entra ID group [#5471](https://github.com/pnp/cli-microsoft365/issues/5471)
 - [entra group add](../cmd/entra/group/group-add.mdx) - creates a Microsoft Entra group [#5476](https://github.com/pnp/cli-microsoft365/issues/5476)
-- [entra app permission list](../cmd/entra/app/app-permission-list.mdx) - lists the application and delegated permissions for a specified Entra Application Registration [#5668](https://github.com/pnp/cli-microsoft365/issues/5668)
+- [entra user registrationdetails list](../cmd/entra/user/user-registrationdetails-list.mdx) - retrieves a list of the authentication methods registered for users [#5773](https://github.com/pnp/cli-microsoft365/issues/5773)
+
 
 **File:**
 
@@ -28,6 +31,14 @@ sidebar_position: 4
 - added request header Prefer: include-unknown-enum-members when reading connection schema [#5826](https://github.com/pnp/cli-microsoft365/issues/5826)
 - updated Docker images to use Node@20 [#5809](https://github.com/pnp/cli-microsoft365/pull/5809)
 - updated 'm365 entra user get' command to use correct query to Graph API [#5788](https://github.com/pnp/cli-microsoft365/issues/5788)
+- added tests and coverage summary to workflow [#3288](https://github.com/pnp/cli-microsoft365/issues/3288)
+- renamed 'yammer' to 'viva engage' [#5573](https://github.com/pnp/cli-microsoft365/issues/5573)
+- updated workflow actions
+- fixed the guide and 'spfx project github workflow add' command [#5814](https://github.com/pnp/cli-microsoft365/issues/5814)
+- renamed 'entra sp' to 'entra enterpriseapp' [#5680](https://github.com/pnp/cli-microsoft365/issues/5680)
+- added additional example for 'spo theme set' [#5819](https://github.com/pnp/cli-microsoft365/issues/5819)
+- added response section for remaning commands in docs [#5851](https://github.com/pnp/cli-microsoft365/issues/5851)
+- removed base command 'AzmgmtCommand' and 'AzmgmtItemsListCommand' [#5858](https://github.com/pnp/cli-microsoft365/issues/5858)
 
 ## [v7.4.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.4.0)
 
