Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -39,6 +39,7 @@ sidebar_position: 4
 - added additional example for 'spo theme set' [#5819](https://github.com/pnp/cli-microsoft365/issues/5819)
 - added response section for remaning commands in docs [#5851](https://github.com/pnp/cli-microsoft365/issues/5851)
 - removed base command 'AzmgmtCommand' and 'AzmgmtItemsListCommand' [#5858](https://github.com/pnp/cli-microsoft365/issues/5858)
+- fixed paging in SharePoint search using allResults [#5710](https://github.com/pnp/cli-microsoft365/issues/5710)
 
 ## [v7.4.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.4.0)
 
