Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -16,7 +16,6 @@ sidebar_position: 4
 - [entra group add](../cmd/entra/group/group-add.mdx) - creates a Microsoft Entra group [#5476](https://github.com/pnp/cli-microsoft365/issues/5476)
 - [entra user registrationdetails list](../cmd/entra/user/user-registrationdetails-list.mdx) - retrieves a list of the authentication methods registered for users [#5773](https://github.com/pnp/cli-microsoft365/issues/5773)
 
-
 **File:**
 
 - [file copy](../cmd/file/file-copy.mdx) - copies a file to another location using the Microsoft Graph [#4623](https://github.com/pnp/cli-microsoft365/issues/4623)
@@ -40,6 +39,7 @@ sidebar_position: 4
 - added response section for remaning commands in docs [#5851](https://github.com/pnp/cli-microsoft365/issues/5851)
 - removed base command 'AzmgmtCommand' and 'AzmgmtItemsListCommand' [#5858](https://github.com/pnp/cli-microsoft365/issues/5858)
 - fixed paging in SharePoint search using allResults [#5710](https://github.com/pnp/cli-microsoft365/issues/5710)
+- added support for signing in with multiple identities [#3587](https://github.com/pnp/cli-microsoft365/issues/3587)
 
 ## [v7.4.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.4.0)
 
