Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,20 @@ sidebar_position: 4
 
 # Release notes
 
+## v7.6.0 (beta)
+
+### New commands
+
+**Purview:**
+
+- [purview threatassessment add](../cmd/purview/threatassessment/threatassessment-add.mdx) - creates a threat assessment [#4428](https://github.com/pnp/cli-microsoft365/issues/4428)
+- [purview threatassessment list](../cmd/purview/threatassessment/threatassessment-list.mdx) - get a list of threat assessments [#4426](https://github.com/pnp/cli-microsoft365/issues/4426)
+
+### Changes
+
+- refactored 'auth' and 'chili' files to async/await. [#5145](https://github.com/pnp/cli-microsoft365/issues/5145)
+- refactored 'cli' files to async/await. [#5146](https://github.com/pnp/cli-microsoft365/issues/5146)
+
 ## [v7.5.0](https://github.com/pnp/cli-microsoft365/releases/tag/v7.5.0)
 
 ### New commands
