--- a/docs/docs/cmd/purview/threatassessment/threatassessment-add.mdx
+++ b/docs/docs/cmd/purview/threatassessment/threatassessment-add.mdx
@@ -35,8 +35,11 @@ m365 purview threatassessment add [options]
 
 ## Remarks
 
-!!! attention
+:::info
+
     This command currently only supports delegated permissions.
+
+:::
 
 ## Examples
 
