--- a/docs/docs/cmd/entra/pim/pim-role-assignment-add.mdx
+++ b/docs/docs/cmd/entra/pim/pim-role-assignment-add.mdx
@@ -33,8 +33,11 @@ m365 entra pim role assignment add [options]
 `--groupName [groupName]`
 : Display name of the group that will be granted the assignment. Specify either `userId`, `userName`, `groupId` or `groupName`. If not specified, the current user will be used.
 
-`--directoryScopeId [directoryScopeId]`
-: Id of the directory object representing the scope of the assignment. If not specified, will default to tenant-wide scope.
+`--administrativeUnitId [administrativeUnitId]`
+: Id of the administrative unit representing the scope of the assignment. Specify either `administrativeUnitId` or `applicationId`. If not specified, default scope will be tenant-wide.
+
+`--applicationId [applicationId]`
+: Object id of the application representing the scope of the assignment. Specify either `administrativeUnitId` or `applicationId`. If not specified, default scope will be tenant-wide.
 
 `-j, --justification [justification]`
 : An optional justification message.
@@ -88,19 +91,19 @@ m365 entra pim role assignment add --roleDefinitionId 'f1417aa3-bf0b-4cc5-a845-a
 Request activation of an Entra ID role assignment for a specified user with tenant scope.
 
 ```sh
-m365 entra pim role assignment add --roleDefinitionId 'f1417aa3-bf0b-4cc5-a845-a0b2cf11f690' --userId '3488d6b8-6b2e-41c3-9583-1991205323c2' --directoryScopeId '/'
+m365 entra pim role assignment add --roleDefinitionId 'f1417aa3-bf0b-4cc5-a845-a0b2cf11f690' --userId '3488d6b8-6b2e-41c3-9583-1991205323c2'
 ```
 
 Request activation of the User Administrator Entra ID role assignment for a specified group with administrative unit scope.
 
 ```sh
-m365 entra pim role assignment add --roleDefinitionName 'User Administrator' --groupId '3488d6b8-6b2e-41c3-9583-1991205323c2' --directoryScopeId '/administrativeUnits/03c4c9dc-6f0c-4c4f-a4e6-0c9ed80f54c7'
+m365 entra pim role assignment add --roleDefinitionName 'User Administrator' --groupId '3488d6b8-6b2e-41c3-9583-1991205323c2' --administrativeUnitId '03c4c9dc-6f0c-4c4f-a4e6-0c9ed80f54c7'
 ```
 
 Request activation of the Application Administrator Entra ID role assignment for a specified group with scope to a specific application.
 
 ```sh
-m365 entra pim role assignment add --roleDefinitionName 'Application Administrator' --groupName 'Applications admins' --directoryScopeId '/03c4c9dc-6f0c-4c4f-a4e6-0c9ed80f54c7'
+m365 entra pim role assignment add --roleDefinitionName 'Application Administrator' --groupName 'Applications admins' --applicationId '03c4c9dc-6f0c-4c4f-a4e6-0c9ed80f54c7'
 ```
 
 Request activation of an Entra ID role assignment for a specific period of two days.
